"Leia mais" mudado para "continue lendo"

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
         {{ post.excerpt }}
       </div>
 
-      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Leia Mais</a>
+      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Continue lendo</a>
     </article>
   {% endfor %}
 </div>
